--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -129,6 +129,9 @@
 
   <body>
 
+    <div style="background-color: #000; width: 100vw; height: 100vh; position: absolute; left: 0; top: 0; z-index: 99999">
+    </div>
+
     <script>
       <% if cookies[:needs_refresh] == 'true' %>
         Turbolinks.clearCache();
